// protoc -I=. -I=$GOPATH/src --go_out=plugins=grpc:. *.proto
syntax = "proto3";

package device.driver;
option go_package = "github.com/txchat/im-util/client-pressurev2/pkg/device";

message ConnectReq {
}

message ConnectReply {
}

message ReConnectReq {
}

message ReConnectReply {
}

message DisConnectReq {
}

message DisConnectReply {
}

message ChangeCurrentPageReq {
  int32 channelType = 1;
  string target = 2;
}

message ChangeCurrentPageReply {
}

message InputReq {
  string text = 1;
}

message InputReply {
}


message OutputReq {
}

message OutputReply {
  string msg = 1;
}


service Driver {
  rpc Connect(ConnectReq) returns (ConnectReply);
  rpc ReConnect(ReConnectReq) returns (ReConnectReply);
  rpc DisConnect(DisConnectReq) returns (DisConnectReply);
  rpc ChangeCurrentPage(ChangeCurrentPageReq) returns (ChangeCurrentPageReply);

  rpc Input(stream InputReq) returns (InputReply);
  rpc Output(OutputReq) returns (stream OutputReply);
}